# Inventory_RL

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  benchmark.py  inference.py  openenv.yaml  pyproject.toml  requirements-llm.txt  requirements.txt  train.py
.github/workflows/: ci.yml
api/: main.py
baseline/: __init__.py  fixed_quantity_agent.py  heuristic_agent.py
environment/: __init__.py  demand_simulator.py  graders.py  models.py  warehouse_env.py
frontend/: index.html  vite.config.js
frontend/src/: App.jsx  index.css
models/task1_single_product/logs/: evaluations.npz
models/task2_multi_product/logs/: evaluations.npz
models/task3_nonstationary/logs/: evaluations.npz
server/: app.py
tasks/: task1_easy.yaml  task2_medium.yaml  task3_hard.yaml
tests/: test_api.py  test_baseline.py  test_benchmark.py  test_environment.py  test_graders.py
