[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inventory_rl"
version = "1.0.0"
description = "Multi-product warehouse inventory control under stochastic demand — OpenEnv benchmark"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "CyborgX07" }
]
dependencies = [
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pyyaml>=6.0",
    "stable-baselines3>=2.2.0",
    "torch>=2.1.0",
    "shimmy>=1.3.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
llm = [
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
    "ruff>=0.4.0",
]

# ── Ruff (linter + formatter) ────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

# ── Pytest ────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
